--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/idleberg/atom-build-innosetup",
   "license": "MIT",
   "keywords": [
-    "build-provider",
+    "buildprovider",
     "inno setup",
     "innosetup",
     "installer",
@@ -27,7 +27,7 @@
     }
   },
   "package-deps": [
-    "build-provider"
+    "build"
   ],
   "dependencies": {
     "atom-package-deps": "^4.3.1"
